adding commit to test push from local

--- a/_posts/2024-01-13-pushPost.md
+++ b/_posts/2024-01-13-pushPost.md
@@ -6,3 +6,5 @@ title: Pushing from Local
 # Wow
 I did it from my local machine, how cool is that?
 
+Testing again. this time _really_ from my computer.
+
